--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <app-the-aside></app-the-aside>
   </aside>
 
-  <main class="the-main">
+  <main class="the-main section">
     <router-outlet />
   </main>
 
