--- a/src/app/components/the-navbar/the-navbar.component.html
+++ b/src/app/components/the-navbar/the-navbar.component.html
@@ -1,1 +1,13 @@
-<p>the-navbar works!</p>
+<div class="primary-header wrapper" data-width="extra-wide">
+  <div>
+    <img src="https://placehold.co/70x70" alt="Logo" />
+  </div>
+  <div>
+    <ul>
+      <li role="list">
+        <a [routerLink]="'/calculators'" routerLinkActive="active">Lista de calculadoras</a>
+
+      </li>
+    </ul>
+  </div>
+</div>
