--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,32 +1,42 @@
 .the-wrapper {
-    display: grid;
-    grid-template-rows: auto 1fr;
-    grid-template-columns: 250px 1fr;
-    grid-template-areas: 
-        "header header"
-        "aside content";
-    height: 100vh;
-    gap: 10px;
-    padding: 10px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 250px 1fr;
+  grid-template-areas:
+    "header header"
+    "aside content";
+  height: 100vh;
 }
 
 .the-header {
-    grid-area: header;
-    background: #f0f0f0;
-    padding: 20px;
-    border: 1px solid #000;
+  grid-area: header;
+  background: var(--background-heading);
+  padding-block: 1.2rem;
 }
 
-
 .the-aside {
-    grid-area: aside;
-    background: #e0e0e0;
-    padding: 20px;
-    border: 1px solid #000;
+  grid-area: aside;
+  background: var(--background-aside);
 }
 
 .the-main {
-    grid-area: content;
-    padding: 20px;
-    border: 1px solid #000;
+  grid-area: content;
+  background: var(--background-main);
+}
+
+@media screen and (max-width: 768px) {
+  .the-wrapper {
+    grid-template-rows: auto  1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "content";
+    height: 100vh;
+  }
+  .the-aside{
+    display:none;
+  }
+
+ 
+  
 }
