--- a/src/app/pages/calculator-card/calculator-card.component.html
+++ b/src/app/pages/calculator-card/calculator-card.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="card ">
     <h3>Calculadora {{ calculator.name }}</h3>
     <a [routerLink]="['/calculator', calculator.id]">Ir a la calculadora</a>
   </div>
