--- a/src/app/pages/calculator-view/calculator-view.component.css
+++ b/src/app/pages/calculator-view/calculator-view.component.css
@@ -9,4 +9,13 @@
 
 .calc-button{
     margin-top: 3rem;
+    
 }
+
+.button-margin{
+    margin-bottom: 1rem;
+}
+
+.calc-title {
+    margin-bottom: 1.5rem;
+  }
