--- a/src/app/pages/calculator-view/calculator-view.component.html
+++ b/src/app/pages/calculator-view/calculator-view.component.html
@@ -1,5 +1,5 @@
 <div class="calc wrapper">
-<h3 class="calc-title">Calculadora {{calculator!.id}}: <span class="calc-subtitle">{{calculator!.name}}</span></h3>
+<h1 class="page-title">Calculadora {{calculator!.id}}: <span class="subtitle">{{calculator!.name}}</span></h1>
 <div>
     <app-the-form-calculator [calculator]="calculator"></app-the-form-calculator>
 </div>
@@ -7,3 +7,4 @@
    <app-the-button></app-the-button>
 </div>
 </div>
+
