--- a/src/app/components/the-button/the-button.component.html
+++ b/src/app/components/the-button/the-button.component.html
@@ -1,1 +1,1 @@
-<button class="the-button button" [routerLink]="'/calculators'">Volver atrás</button>
+<button class="button primary-button" [routerLink]="'/calculators'">Volver atrás</button>
