--- a/src/app/components/the-navbar/the-navbar.component.css
+++ b/src/app/components/the-navbar/the-navbar.component.css
@@ -1,9 +1,74 @@
-.primary-header{
-    display:flex;
-    flex-wrap: wrap;
-    gap: 0.5rem 2rem;
-    justify-content:space-between;
-
-    
+.primary-header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
+.logo {
+  width: 9rem;
+}
+
+.the-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .the-nav {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background: var( --background-hamburger);   
+  }
+
+  .the-nav.open {
+    display: flex;
+  }
+
+  .the-nav ul {
+    flex-direction: column;
+
+    text-align: center;
+  }
+
+
+  .hamburger {
+    display: block;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--clr-black);
+    position: absolute;
+    right: 20px;
+    top: 2.5rem;
+    z-index: 1100;
+  }
+}
+
+@media (min-width: 769px) {
+  .hamburger {
+    display: none;
+  }
+}
+
+.nav-item{
+  
+    font-size: var(--font-size-mds);
+}
+
+.open-color {
+    color: var(--clr-white); 
+}
+
+.closed-color {
+    color:  var(--clr-blue-afi); 
+}
