--- a/src/app/components/the-navbar/the-navbar.component.html
+++ b/src/app/components/the-navbar/the-navbar.component.html
@@ -1,12 +1,25 @@
 <div class="primary-header wrapper" data-width="extra-wide">
   <div>
-    <img src="https://placehold.co/70x70" alt="Logo" />
+    <a [routerLink]="['/calculators']">
+      <img class="logo" src="/logo.png" alt="Logo"
+    /></a>
   </div>
-  <div>
+
+  <div class="center">
+    <button class="hamburger" (click)="toggleMenu()">☰</button>
+  </div>
+
+  <div class="the-nav" [class.open]="isMenuOpen">
     <ul>
       <li role="list">
-        <a [routerLink]="'/calculators'" routerLinkActive="active">Lista de calculadoras</a>
-
+        <a
+          [routerLink]="'/calculators'"
+          routerLinkActive="active"
+          class="nav-item"
+          [ngClass]="{ 'closed-color': isMenuOpen, 'open-color': !isMenuOpen }"
+        >
+          Lista de calculadoras
+        </a>
       </li>
     </ul>
   </div>
