--- a/src/app/pages/calculator-view/calculator-view.component.html
+++ b/src/app/pages/calculator-view/calculator-view.component.html
@@ -1,5 +1,5 @@
 <div class="calc wrapper">
-<h1 class="page-title">Calculadora {{calculator!.id}}: <span class="subtitle">{{calculator!.name}}</span></h1>
+<h1 class="page-title calc-title">Calculadora {{calculator!.id}}: <span class="subtitle">{{calculator!.name}}</span></h1>
 <div>
     <app-the-form-calculator [calculator]="calculator"></app-the-form-calculator>
 </div>
