--- a/src/app/components/the-form-calculator/the-form-calculator.component.css
+++ b/src/app/components/the-form-calculator/the-form-calculator.component.css
@@ -6,9 +6,15 @@
     
 }
 
-
-
-
   .calc-symbol {
-    font-size: 2rem;
+    font-size: var(--font-size-lg);
   }
+
+  .error-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20px;  
+  }
+  
+ 
