--- a/src/styles.css
+++ b/src/styles.css
@@ -122,7 +122,7 @@
   :root {
     --text-main: var(--clr-black);
     --text-hover: var(--clr-blue-afi);
-    --text-button-disabled: var(--c)
+    --text-button-disabled: var(--clr-grey-dark);
 
     --background-main: var(--clr-white);
     --background-cards: var(--clr-blue-afi);
@@ -147,7 +147,7 @@
     --border-radius-3: 0.75rem;
 
     --border-color: var(--clr-blue-afi);
-    --border-color-hover: var(--clr-blue-afi--soft);
+    --border-color-hover: var(--clr-blue-afi-soft);
   }
   :root {
     --btn-font-family: var(--ff-body);
@@ -295,8 +295,17 @@
 @layer layout {
 
   .flow > * + * {
-    margin-block-start: var(--flow-space, 1em);
+    margin-block-start: var( 1em);
   }
+
+  .grid-flow {
+    display: grid;
+    gap: var(1rem);
+
+    align-content: start;
+    justify-items: start;
+  }
+
   .wrapper {
     --wrapper-max-width: 1130px;
     --wrapper-padding: 1.5rem;
