--- a/src/app/components/the-navbar/the-navbar.component.html
+++ b/src/app/components/the-navbar/the-navbar.component.html
@@ -6,6 +6,7 @@
   </div>
 
   <div class="center">
+    <span class="visually-hidden">Menu</span>
     <button class="hamburger" (click)="toggleMenu()">☰</button>
   </div>
 
