--- a/src/app/components/the-form-calculator/the-form-calculator.component.html
+++ b/src/app/components/the-form-calculator/the-form-calculator.component.html
@@ -23,10 +23,10 @@
         Número B:
         <input class="input" type="number" formControlName="numberB" />
       </label>
-      <div id="errorA" class="error-container">
+      <div class="error-container">
         @if (calculatorForm.get('numberB')?.touched &&
         calculatorForm.get('numberB')?.hasError('required')) {
-        <div id="errorB">
+        <div>
           <small class="alert-form">Número B es obligatorio.</small>
         </div>
         }
