--- a/src/app/components/the-navbar/the-navbar.component.html
+++ b/src/app/components/the-navbar/the-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="primary-header wrapper" data-width="extra-wide">
+<div class="primary-header wrapper" data-width="wide">
   <div>
     <a [routerLink]="['/calculators']">
       <img class="logo" src="/logo.png" alt="Logo"
