--- a/src/app/components/the-form-calculator/the-form-calculator.component.html
+++ b/src/app/components/the-form-calculator/the-form-calculator.component.html
@@ -41,7 +41,7 @@
       @if (active) {
       <button
         type="button"
-        class="button primary-button"
+        class="button primary-button calc-button"
         (click)="calculate()"
         [disabled]="calculatorForm.invalid"
       >
